fixed: coupon slider invisible overflow broke page interaction

--- a/sass/layout/_coupon-slider.scss
+++ b/sass/layout/_coupon-slider.scss
@@ -1,4 +1,5 @@
 .coupon-slider {
+	overflow: hidden;
 	.coupon-list {
 		display: flex;
 		justify-content: space-around;
